# akamai-mcp-control-plane

./: IMPLEMENTATION_PLAN.md  MCP Control Plane - MVP Implementation Architecture.txt  README.md  idea.txt  mvp-implemenation-plan.md  readme_enterprise.md  test_bridge.py
bridge/: README.md  UV_SETUP.md  pyproject.toml
bridge/config/: claude_desktop_config.json
bridge/src/: bridge_client.py
control_plane/: README.md  pyproject.toml
control_plane/config/: control_plane.yaml
control_plane/src/: __init__.py  auth.py  config.py  control_plane_server.py  mcp_client_pool.py
docs/: BRIDGE_ARCHITECTURE.md
